# Ticket_triage_v1

./: .env.example  .gitignore  DEMO_RUNBOOK.md  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: health.py  tickets.py  webhooks.py
app/core/: security.py
app/models/: ticket.py  webhook.py
app/services/: triage_service.py  webex_service.py
app/static/css/: style.css
app/templates/: base.html  dashboard.html  ticket_detail.html  tickets_list.html
cli/: main.py
config/: settings.py
db/: database.py  models.py  repository.py
knowledge_base/: chunker.py  indexer.py  vector_store.py
knowledge_base/runbooks/application/: database_connection.md  error_500.md  timeout_errors.md
knowledge_base/runbooks/infrastructure/: disk_full.md  high_cpu.md  memory_issues.md
knowledge_base/runbooks/monitoring/: alert_thresholds.md  escalation_procedures.md
llm/: groq_client.py  prompts.py
scripts/: setup.py
