[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-triage"
version = "1.0.0"
description = "Production Issues Ticket Triage System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "webexteamssdk>=1.6.1",
    "httpx>=0.26.0",
    "groq>=0.4.2",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.22",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.3",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
]

[project.scripts]
triage = "cli.main:main"

[tool.setuptools.packages.find]
include = ["app*", "config*", "db*", "knowledge_base*", "llm*", "cli*"]
